==== LimeChat 0.17.1 ====

2008-03-26  Satoshi Nakagawa <artension@gmail.com>

	Assigned Cmd-w to close the window, and Cmd-Shift-w to close the current channel.

2008-03-25  Satoshi Nakagawa <artension@gmail.com>

	Changed /part without parameters to close the current talk.
	On the paste dialog, changed "Privmsg command" and "Notice command" to "Send to channel" and "Send Notice to Channel" respectively.

2008-03-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to order front the main window when clicked on a growl notification.

2008-03-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to not use nick format for transcripts.

2008-03-19  Satoshi Nakagawa <artension@gmail.com>

	Changed to handle /whois to get more information.

2008-03-19  Kevin Ballard <kballard@gmail.com>

	Added Rakefile and changed install path to /Applications.

2008-03-19  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug in utf-8 string validator.

2008-03-19  Satoshi Nakagawa <artension@gmail.com>

	Added fallback encoding.

2008-03-16  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, log views dropped received lines before initializing.

2008-03-14  Satoshi Nakagawa <artension@gmail.com>

	Refactoring key handlers.
	Added opt-up/down to move around histories.

2008-03-12  Satoshi Nakagawa <artension@gmail.com>

	Removed opt-up/down because it interfered with ctrl-a/e.

2008-03-12  Satoshi Nakagawa <artension@gmail.com>

	Added SSL support.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, 'Reveal in Finder' menu action on the dcc dialog caused an exception.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Now we can use more delimiters for nick completion.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Added /rejoin, /cycle and /hop commands to rejoin the current channel.
	Fixed a bug, 'Highlight your current nickname' option should be applied for the console log.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>
