@@ -1,2 +1,4 @@
 AppVersion = "LimeChat for OSX 0.17.1";
 CtcpClientInfo = "DCC VERSION CLIENTINFO USERINFO PING TIME";
+CloseWindowMenuTitle = "Close Window";
+CloseCurrentPanelMenuTitle = "Close Current Panel";
